...
    android:background="@drawable/ic_baseline_ac_unit_24"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="@color/button_background_color"
...
