...
  <TextView
      android:id="@+id/MyTaskFragTVName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:padding="16dp"
      android:text="title"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="#716C6C"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.466"
      app:layout_constraintHorizontal_chainStyle="spread"
...
